--- a/04_Expression/scripts/gene_coexpression_module_associations.ipynb
+++ b/04_Expression/scripts/gene_coexpression_module_associations.ipynb
@@ -20,62 +20,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "804bf0b8-4f35-4750-91d9-50e2c007797d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading required package: UpSetR\n",
-      "\n",
-      "Warning message in library(package, lib.loc = lib.loc, character.only = TRUE, logical.return = TRUE, :\n",
-      "“there is no package called ‘UpSetR’”\n",
-      "also installing the dependency ‘plyr’\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "rm(list=ls())\n",
+    "if (!requireNamespace(\"patchwork\")) {\n",
+    "    install.packages(\"devtools\")\n",
+    "    devtools::install_github(\"thomasp85/patchwork\")\n",
+    "}\n",
     "\n",
-    "if (!require(\"UpSetR\")) {\n",
+    "if (!requireNamespace(\"UpSetR\")) {\n",
     "    install.packages(\"UpSetR\")\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "ae63da6d-644a-43f8-a241-c139566c1e09",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message in system(\"timedatectl\", intern = TRUE):\n",
-      "“running command 'timedatectl' had status 1”\n",
-      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.1 ──\n",
-      "\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.5     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.6     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.7\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.4     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.1.0     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
-      "\n",
-      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "library(tidyverse)\n",
     "library(RColorBrewer)\n",
-    "library(cowplot)\n",
+    "library(patchwork)\n",
     "library(UpSetR)\n",
     "\n",
     "setwd(\"~/eQTL_pQTL_Characterization/\")\n",
@@ -93,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "f6ff7787-9342-4906-acdc-c0184d5c4b49",
    "metadata": {},
    "outputs": [],
@@ -117,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "3f7577a9-1c07-4240-9595-0e9e813f19d9",
    "metadata": {},
    "outputs": [],
@@ -144,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "177aadab-f4bb-4df9-96de-7d6109561665",
    "metadata": {},
    "outputs": [
@@ -159,7 +128,7 @@
       "\u001b[90m2\u001b[39m Outcome                   8.20  \n",
       "\u001b[90m3\u001b[39m SRSq                      0.540 \n",
       "\u001b[90m4\u001b[39m Time Point                0.010\u001b[4m2\u001b[24m\n",
-      "\u001b[90m5\u001b[39m xCell Score               0.166 \n"
+      "\u001b[90m5\u001b[39m xCell Score               0.165 \n"
      ]
     }
    ],
@@ -173,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "e987d324-99c0-4ad0-964d-d853b7ee3da6",
    "metadata": {},
    "outputs": [
@@ -243,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "351fd410-33ee-428c-8848-36d255945236",
    "metadata": {},
    "outputs": [
@@ -356,7 +325,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.1.1"
+   "version": "4.0.5"
   }
  },
  "nbformat": 4,
