--- a/04_Expression/scripts/gene_coexpression_module_proportional_hazards_model.ipynb
+++ b/04_Expression/scripts/gene_coexpression_module_proportional_hazards_model.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "79b11a91-55f6-4f00-be5f-de7ab20cb62d",
    "metadata": {},
    "outputs": [
@@ -28,35 +28,42 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading required package: survminer\n",
+      "Loading required namespace: patchwork\n",
       "\n",
-      "Warning message in library(package, lib.loc = lib.loc, character.only = TRUE, logical.return = TRUE, :\n",
-      "“there is no package called ‘survminer’”\n",
-      "also installing the dependencies ‘listenv’, ‘parallelly’, ‘future’, ‘globals’, ‘future.apply’, ‘progressr’, ‘SQUAREM’, ‘KernSmooth’, ‘lava’, ‘prodlim’, ‘class’, ‘proxy’, ‘gower’, ‘ipred’, ‘timeDate’, ‘e1071’, ‘ModelMetrics’, ‘plyr’, ‘pROC’, ‘recipes’, ‘reshape2’, ‘caret’, ‘RcppArmadillo’, ‘zip’, ‘numDeriv’, ‘SparseM’, ‘MatrixModels’, ‘conquer’, ‘sp’, ‘openxlsx’, ‘boot’, ‘minqa’, ‘nloptr’, ‘RcppEigen’, ‘carData’, ‘abind’, ‘pbkrtest’, ‘quantreg’, ‘maptools’, ‘rio’, ‘lme4’, ‘corrplot’, ‘car’, ‘ggrepel’, ‘ggsci’, ‘ggsignif’, ‘polynom’, ‘rstatix’, ‘exactRankTests’, ‘KMsurv’, ‘zoo’, ‘km.ci’, ‘gridtext’, ‘ggpubr’, ‘maxstat’, ‘survMisc’, ‘ggtext’\n",
+      "Loading required namespace: survival\n",
       "\n",
+      "Loading required namespace: survminer\n",
+      "\n",
+      "also installing the dependencies ‘listenv’, ‘parallelly’, ‘future’, ‘globals’, ‘future.apply’, ‘progressr’, ‘SQUAREM’, ‘KernSmooth’, ‘lava’, ‘prodlim’, ‘class’, ‘proxy’, ‘gower’, ‘ipred’, ‘timeDate’, ‘e1071’, ‘ModelMetrics’, ‘plyr’, ‘pROC’, ‘recipes’, ‘reshape2’, ‘caret’, ‘RcppArmadillo’, ‘numDeriv’, ‘SparseM’, ‘MatrixModels’, ‘conquer’, ‘sp’, ‘boot’, ‘minqa’, ‘nloptr’, ‘RcppEigen’, ‘carData’, ‘abind’, ‘pbkrtest’, ‘quantreg’, ‘maptools’, ‘lme4’, ‘corrplot’, ‘car’, ‘markdown’, ‘ggrepel’, ‘ggsci’, ‘cowplot’, ‘ggsignif’, ‘polynom’, ‘rstatix’, ‘exactRankTests’, ‘KMsurv’, ‘zoo’, ‘km.ci’, ‘gridtext’, ‘ggpubr’, ‘maxstat’, ‘survMisc’, ‘ggtext’\n",
+      "\n",
+      "\n",
+      "Loading required namespace: lubridate\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "rm(list=ls())\n",
+    "if (!requireNamespace(\"patchwork\")) {\n",
+    "    install.packages(\"devtools\")\n",
+    "    devtools::install_github(\"thomasp85/patchwork\")\n",
+    "}\n",
     "\n",
-    "if (!require(\"survival\")) {\n",
+    "if (!requireNamespace(\"survival\")) {\n",
     "    install.packages(\"survival\")\n",
     "}\n",
     "\n",
-    "if (!require(\"survminer\")) {\n",
+    "if (!requireNamespace(\"survminer\")) {\n",
     "    install.packages(\"survminer\")\n",
     "}\n",
     "\n",
-    "if (!require(\"lubridate\")) {\n",
+    "if (!requireNamespace(\"lubridate\")) {\n",
     "    install.packages(\"lubridate\")\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "c639de4a-d0da-4066-ba10-ba125f671ecf",
    "metadata": {},
    "outputs": [
@@ -64,41 +71,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "── \u001b[1mAttaching packages\u001b[22m ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.1 ──\n",
+      "── \u001b[1mAttaching packages\u001b[22m ──────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.1 ──\n",
       "\n",
       "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.5     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.5     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.7\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.6     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.7\n",
       "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.4     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.0.2     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.1.1     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "── \u001b[1mConflicts\u001b[22m ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mlubridate\u001b[39m::\u001b[32mas.difftime()\u001b[39m masks \u001b[34mbase\u001b[39m::as.difftime()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mlubridate\u001b[39m::\u001b[32mdate()\u001b[39m        masks \u001b[34mbase\u001b[39m::date()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m          masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mlubridate\u001b[39m::\u001b[32mintersect()\u001b[39m   masks \u001b[34mbase\u001b[39m::intersect()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m             masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mlubridate\u001b[39m::\u001b[32msetdiff()\u001b[39m     masks \u001b[34mbase\u001b[39m::setdiff()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mlubridate\u001b[39m::\u001b[32munion()\u001b[39m       masks \u001b[34mbase\u001b[39m::union()\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘cowplot’\n",
-      "\n",
-      "\n",
-      "The following object is masked from ‘package:lubridate’:\n",
-      "\n",
-      "    stamp\n",
-      "\n",
+      "── \u001b[1mConflicts\u001b[22m ─────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n",
       "Loading required package: ggpubr\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘ggpubr’\n",
-      "\n",
-      "\n",
-      "The following object is masked from ‘package:cowplot’:\n",
-      "\n",
-      "    get_legend\n",
-      "\n",
       "\n",
       "\n",
       "Attaching package: ‘survminer’\n",
@@ -108,6 +92,15 @@
       "\n",
       "    myeloma\n",
       "\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘lubridate’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:base’:\n",
+      "\n",
+      "    date, intersect, setdiff, union\n",
+      "\n",
       "\n"
      ]
     }
@@ -115,7 +108,7 @@
    "source": [
     "library(tidyverse)\n",
     "library(RColorBrewer)\n",
-    "library(cowplot)\n",
+    "library(patchwork)\n",
     "library(survival)\n",
     "library(survminer)\n",
     "library(lubridate)\n",
@@ -135,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "e0e4a9a3-90f0-4cea-84a8-c975d6299657",
    "metadata": {},
    "outputs": [],
@@ -171,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "24269772-bc78-4186-b988-aaa7bdbe1f8a",
    "metadata": {},
    "outputs": [],
@@ -197,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "c01ecfea-2ecc-4e96-b306-8c4813688f00",
    "metadata": {},
    "outputs": [
@@ -244,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "8d8a58d0-be42-4157-adfe-5e772cd1ebb1",
    "metadata": {},
    "outputs": [
@@ -396,7 +389,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.1.1"
+   "version": "4.0.5"
   }
  },
  "nbformat": 4,
