--- a/04_Expression/scripts/gene_coexpression_module_annotation.ipynb
+++ b/04_Expression/scripts/gene_coexpression_module_annotation.ipynb
@@ -20,7 +20,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "id": "a12cd20d-2eb4-46e0-9c02-ac2763ad894f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required namespace: enrichR\n",
+      "\n",
+      "also installing the dependency ‘rjson’\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "if (!requireNamespace(\"enrichR\")) {\n",
+    "    install.packages(\"enrichR\")\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "bca1b88c-43bd-42e0-b504-e6249f761933",
    "metadata": {},
    "outputs": [
@@ -28,14 +52,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "── \u001b[1mAttaching packages\u001b[22m ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.1 ──\n",
+      "── \u001b[1mAttaching packages\u001b[22m ──────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.1 ──\n",
       "\n",
       "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.5     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.5     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.7\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.6     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.7\n",
       "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.4     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.0.2     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.1.1     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "── \u001b[1mConflicts\u001b[22m ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "── \u001b[1mConflicts\u001b[22m ─────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──\n",
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n",
@@ -61,8 +85,6 @@
     }
    ],
    "source": [
-    "rm(list=ls())\n",
-    "\n",
     "library(tidyverse)\n",
     "library(enrichR)\n",
     "\n",
@@ -83,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "1b95ebf7-a4df-46e9-9a5d-87a728d397c1",
    "metadata": {},
    "outputs": [],
@@ -106,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "9cf76e61-e59f-49d4-bd63-a7ce700b8c2d",
    "metadata": {},
    "outputs": [
@@ -1172,10 +1194,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "00208492-7b8b-428e-81f9-3f629247a9d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message in dir.create(\"~/gains_team282/nikhil/expression/gene_expression_annotations/\", :\n",
+      "“'/nfs/users/nfs_n/nm18/gains_team282/nikhil/expression/gene_expression_annotations' already exists”\n"
+     ]
+    }
+   ],
    "source": [
     "dir.create(\"~/gains_team282/nikhil/expression/gene_expression_annotations/\", recursive=TRUE)\n",
     "for (db in selected.dbs) {\n",
@@ -1207,7 +1238,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.1.1"
+   "version": "4.0.5"
   }
  },
  "nbformat": 4,
