Updated analysis based on new gene expression data

--- a/04_Expression/scripts/gene_coexpression_module_annotation.ipynb
+++ b/04_Expression/scripts/gene_coexpression_module_annotation.ipynb
@@ -29,6 +29,9 @@
      "output_type": "stream",
      "text": [
       "Loading required namespace: enrichR\n",
+      "\n",
+      "also installing the dependency ‘rjson’\n",
+      "\n",
       "\n"
      ]
     }
@@ -412,188 +415,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
       "Uploading data to Enrichr... Done.\n",
       "  Querying GO_Biological_Process_2021... Done.\n",
       "  Querying GO_Cellular_Component_2021... Done.\n",
