--- a/04_Expression/scripts/gene_coexpression_module_annotation.ipynb
+++ b/04_Expression/scripts/gene_coexpression_module_annotation.ipynb
@@ -29,9 +29,6 @@
      "output_type": "stream",
      "text": [
       "Loading required namespace: enrichR\n",
-      "\n",
-      "also installing the dependency ‘rjson’\n",
-      "\n",
       "\n"
      ]
     }
@@ -52,14 +49,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.1 ──\n",
+      "── \u001b[1mAttaching packages\u001b[22m ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.1 ──\n",
       "\n",
       "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.5     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.6     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.7\n",
       "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.4     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.1.1     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "── \u001b[1mConflicts\u001b[22m ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──\n",
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n",
@@ -111,9 +108,9 @@
    "outputs": [],
    "source": [
     "gene.info <- read.table(\"/nfs/team282/data/gains_team282/Gene_info_864_20416.txt\")\n",
-    "modules <- read.csv(\"~/gains_team282/nikhil/expression/gene_expression/modules.csv\")\n",
-    "eigengenes <- read.csv(\"~/gains_team282/nikhil/expression/gene_expression/eigengenes.csv\", row.names=1)\n",
-    "variance.explained <- read.csv(\"~/gains_team282/nikhil/expression/gene_expression/variance.explained.csv\")"
+    "modules <- read.csv(\"~/gains_team282/nikhil/expression/gene_expression/modules.clr.csv\")\n",
+    "eigengenes <- read.csv(\"~/gains_team282/nikhil/expression/gene_expression/eigengenes.clr.csv\", row.names=1)\n",
+    "variance.explained <- read.csv(\"~/gains_team282/nikhil/expression/gene_expression/variance.explained.clr.csv\")"
    ]
   },
   {
@@ -589,293 +586,6 @@
       "  Querying GO_Molecular_Function_2021... Done.\n",
       "  Querying KEGG_2021_Human... Done.\n",
       "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
-      "Parsing results... Done.\n",
-      "Uploading data to Enrichr... Done.\n",
-      "  Querying GO_Biological_Process_2021... Done.\n",
-      "  Querying GO_Cellular_Component_2021... Done.\n",
-      "  Querying GO_Molecular_Function_2021... Done.\n",
-      "  Querying KEGG_2021_Human... Done.\n",
-      "  Querying Reactome_2016... Done.\n",
       "Parsing results... Done.\n"
      ]
     }
@@ -945,18 +655,9 @@
    "execution_count": 5,
    "id": "00208492-7b8b-428e-81f9-3f629247a9d0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message in dir.create(\"~/gains_team282/nikhil/expression/gene_expression_annotations/\", :\n",
-      "“'/nfs/users/nfs_n/nm18/gains_team282/nikhil/expression/gene_expression_annotations' already exists”\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dir.create(\"~/gains_team282/nikhil/expression/gene_expression_annotations/\", recursive=TRUE)\n",
+    "dir.create(\"~/gains_team282/nikhil/expression/gene_expression_annotations/\", recursive=TRUE, showWarnings=FALSE)\n",
     "for (db in selected.dbs) {\n",
     "  \n",
     "  output.annot <- do.call(rbind, annotations.by.db[[db]]) %>%\n",
