--- a/02_pQTL_Mapping/scripts/protein_metadata.ipynb
+++ b/02_pQTL_Mapping/scripts/protein_metadata.ipynb
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "id": "05f05413-55f6-41d5-a65b-ec2dea9909d7",
    "metadata": {},
    "outputs": [],
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "id": "2f6753e4-8cf0-4354-b57c-9d528c99cc03",
    "metadata": {},
    "outputs": [],
@@ -705,8 +705,238 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "id": "d16600f7-5f66-4cf9-9349-c08bec6caecf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Protein</th>\n",
+       "      <th>Accession</th>\n",
+       "      <th>Entry Name</th>\n",
+       "      <th>Gene.Names</th>\n",
+       "      <th>Protein Length</th>\n",
+       "      <th>Coverage</th>\n",
+       "      <th>Protein Existence</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>UniProt_ID</th>\n",
+       "      <th>Gene_ID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>sp|A2VEC9|SSPO_HUMAN</td>\n",
+       "      <td>A2VEC9</td>\n",
+       "      <td>SSPO_HUMAN</td>\n",
+       "      <td>SSPO</td>\n",
+       "      <td>5150</td>\n",
+       "      <td>61.6</td>\n",
+       "      <td>2:Experimental evidence at transcript level</td>\n",
+       "      <td>SCO-spondin</td>\n",
+       "      <td>A2VEC9</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>sp|A6NJ88|SGE2P_HUMAN</td>\n",
+       "      <td>A6NJ88</td>\n",
+       "      <td>SGE2P_HUMAN</td>\n",
+       "      <td>SAGE2P</td>\n",
+       "      <td>616</td>\n",
+       "      <td>47.1</td>\n",
+       "      <td>5:Protein uncertain</td>\n",
+       "      <td>Putative SAGE1-like protein</td>\n",
+       "      <td>A6NJ88</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>sp|P00736|C1R_HUMAN</td>\n",
+       "      <td>P00736</td>\n",
+       "      <td>C1R_HUMAN</td>\n",
+       "      <td>C1R</td>\n",
+       "      <td>705</td>\n",
+       "      <td>87.7</td>\n",
+       "      <td>1:Experimental evidence at protein level</td>\n",
+       "      <td>Complement C1r subcomponent</td>\n",
+       "      <td>P00736</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89</th>\n",
+       "      <td>sp|P01782|HV309_HUMAN</td>\n",
+       "      <td>P01782</td>\n",
+       "      <td>HV309_HUMAN</td>\n",
+       "      <td>IGHV3-9</td>\n",
+       "      <td>118</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>1:Experimental evidence at protein level</td>\n",
+       "      <td>Immunoglobulin heavy variable 3-9</td>\n",
+       "      <td>P01782</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90</th>\n",
+       "      <td>sp|P01834|IGKC_HUMAN</td>\n",
+       "      <td>P01834</td>\n",
+       "      <td>IGKC_HUMAN</td>\n",
+       "      <td>IGKC</td>\n",
+       "      <td>107</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>1:Experimental evidence at protein level</td>\n",
+       "      <td>Immunoglobulin kappa constant</td>\n",
+       "      <td>P01834</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>sp|P01860|IGHG3_HUMAN</td>\n",
+       "      <td>P01860</td>\n",
+       "      <td>IGHG3_HUMAN</td>\n",
+       "      <td>IGHG3</td>\n",
+       "      <td>377</td>\n",
+       "      <td>92.6</td>\n",
+       "      <td>1:Experimental evidence at protein level</td>\n",
+       "      <td>Immunoglobulin heavy constant gamma 3</td>\n",
+       "      <td>P01860</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>117</th>\n",
+       "      <td>sp|P02746|C1QB_HUMAN</td>\n",
+       "      <td>P02746</td>\n",
+       "      <td>C1QB_HUMAN</td>\n",
+       "      <td>C1QB</td>\n",
+       "      <td>253</td>\n",
+       "      <td>92.1</td>\n",
+       "      <td>1:Experimental evidence at protein level</td>\n",
+       "      <td>Complement C1q subcomponent subunit B</td>\n",
+       "      <td>P02746</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>236</th>\n",
+       "      <td>sp|P26927|HGFL_HUMAN</td>\n",
+       "      <td>P26927</td>\n",
+       "      <td>HGFL_HUMAN</td>\n",
+       "      <td>MST1</td>\n",
+       "      <td>711</td>\n",
+       "      <td>73.4</td>\n",
+       "      <td>1:Experimental evidence at protein level</td>\n",
+       "      <td>Hepatocyte growth factor-like protein</td>\n",
+       "      <td>P26927</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>302</th>\n",
+       "      <td>sp|Q4V348|Z658B_HUMAN</td>\n",
+       "      <td>Q4V348</td>\n",
+       "      <td>Z658B_HUMAN</td>\n",
+       "      <td>ZNF658B</td>\n",
+       "      <td>819</td>\n",
+       "      <td>45.2</td>\n",
+       "      <td>2:Experimental evidence at transcript level</td>\n",
+       "      <td>Zinc finger protein 658B</td>\n",
+       "      <td>Q4V348</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   Protein Accession   Entry Name Gene.Names  Protein Length  \\\n",
+       "22    sp|A2VEC9|SSPO_HUMAN    A2VEC9   SSPO_HUMAN       SSPO            5150   \n",
+       "23   sp|A6NJ88|SGE2P_HUMAN    A6NJ88  SGE2P_HUMAN     SAGE2P             616   \n",
+       "49     sp|P00736|C1R_HUMAN    P00736    C1R_HUMAN        C1R             705   \n",
+       "89   sp|P01782|HV309_HUMAN    P01782  HV309_HUMAN    IGHV3-9             118   \n",
+       "90    sp|P01834|IGKC_HUMAN    P01834   IGKC_HUMAN       IGKC             107   \n",
+       "95   sp|P01860|IGHG3_HUMAN    P01860  IGHG3_HUMAN      IGHG3             377   \n",
+       "117   sp|P02746|C1QB_HUMAN    P02746   C1QB_HUMAN       C1QB             253   \n",
+       "236   sp|P26927|HGFL_HUMAN    P26927   HGFL_HUMAN       MST1             711   \n",
+       "302  sp|Q4V348|Z658B_HUMAN    Q4V348  Z658B_HUMAN    ZNF658B             819   \n",
+       "\n",
+       "     Coverage                            Protein Existence  \\\n",
+       "22       61.6  2:Experimental evidence at transcript level   \n",
+       "23       47.1                          5:Protein uncertain   \n",
+       "49       87.7     1:Experimental evidence at protein level   \n",
+       "89       83.9     1:Experimental evidence at protein level   \n",
+       "90      100.0     1:Experimental evidence at protein level   \n",
+       "95       92.6     1:Experimental evidence at protein level   \n",
+       "117      92.1     1:Experimental evidence at protein level   \n",
+       "236      73.4     1:Experimental evidence at protein level   \n",
+       "302      45.2  2:Experimental evidence at transcript level   \n",
+       "\n",
+       "                               Description UniProt_ID Gene_ID  \n",
+       "22                             SCO-spondin     A2VEC9     NaN  \n",
+       "23             Putative SAGE1-like protein     A6NJ88     NaN  \n",
+       "49             Complement C1r subcomponent     P00736     NaN  \n",
+       "89       Immunoglobulin heavy variable 3-9     P01782     NaN  \n",
+       "90           Immunoglobulin kappa constant     P01834     NaN  \n",
+       "95   Immunoglobulin heavy constant gamma 3     P01860     NaN  \n",
+       "117  Complement C1q subcomponent subunit B     P02746     NaN  \n",
+       "236  Hepatocyte growth factor-like protein     P26927     NaN  \n",
+       "302               Zinc finger protein 658B     Q4V348     NaN  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prot_info_all[prot_info_all.Gene_ID.isna()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6489599a-9027-4c15-a0b5-7d1b16c5d45b",
+   "metadata": {},
+   "source": [
+    "Unfortunately, I have to use manual curation to get the Gene IDs for some of the proteins."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "75a2a958-2ca8-421f-813d-46f86a03ab82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prot_info_all.loc[prot_info_all.Accession == 'A2VEC9', 'Gene_ID'] = ['ENSG00000197558']  # SSPO\n",
+    "prot_info_all.loc[prot_info_all.Accession == 'A6NJ88', 'Gene_ID'] = ['ENSG00000198022']  # SAGE2P\n",
+    "prot_info_all.loc[prot_info_all.Accession == 'P00736', 'Gene_ID'] = ['ENSG00000159403']  # C1R\n",
+    "prot_info_all.loc[prot_info_all.Accession == 'P01834', 'Gene_ID'] = ['ENSG00000211592']  # IGKC\n",
+    "prot_info_all.loc[prot_info_all.Accession == 'P01860', 'Gene_ID'] = ['ENSG00000211897']  # IGHG3\n",
+    "prot_info_all.loc[prot_info_all.Accession == 'P02746', 'Gene_ID'] = ['ENSG00000173369']  # C1QB\n",
+    "prot_info_all.loc[prot_info_all.Accession == 'P26927', 'Gene_ID'] = ['ENSG00000173531']  # MST1\n",
+    "prot_info_all.loc[prot_info_all.Accession == 'Q4V348', 'Gene_ID'] = ['ENSG00000198416']  # ZNF658B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f142b0fe-a682-4659-b849-140fe55f1d8a",
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +1065,7 @@
        "4   Immunoglobulin kappa variable 2-40  A0A087WW87  ENSG00000273962  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "id": "72d5766d-50b5-43cd-a910-82822ba67be2",
    "metadata": {},
    "outputs": [],
@@ -864,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "id": "45cc7669-e2c1-4d35-b6f1-79f4df677baf",
    "metadata": {},
    "outputs": [
@@ -1077,7 +1307,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1088,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 21,
    "id": "37ff3aa4-88b6-4c46-b30d-fe96b4093f51",
    "metadata": {},
    "outputs": [],
@@ -1099,7 +1329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ba29a4e-5404-47d4-b604-b503b70f2464",
+   "id": "ccc5ab3a-e181-4405-8eb5-607f2238d7d7",
    "metadata": {},
    "outputs": [],
    "source": []
